# CPP_Lab_5

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: main.cpp.3AD7B6D6572CF96C.idx
src/: main.cpp
